WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21825
JSDOMBinding should not blindly cast the global object to JSDOMWindow
https://bugs.webkit.org/show_bug.cgi?id=21825
Summary
JSDOMBinding should not blindly cast the global object to JSDOMWindow
Alexey Proskuryakov
Reported
2008-10-23 01:07:36 PDT
It might be a worker context, not a JSDOMWindow. Patch forthcoming.
Attachments
proposed fix
(8.09 KB, patch)
2008-10-23 01:42 PDT
,
Alexey Proskuryakov
mjs
: review+
Details
Formatted Diff
Diff
A better fix
(16.22 KB, patch)
2008-10-23 02:41 PDT
,
Alexey Proskuryakov
mjs
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2008-10-23 01:42:09 PDT
Created
attachment 24592
[details]
proposed fix
Maciej Stachowiak
Comment 2
2008-10-23 01:44:48 PDT
Comment on
attachment 24592
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 3
2008-10-23 02:41:55 PDT
Created
attachment 24593
[details]
A better fix As proposed by Maciej on IRC, do not change JavaScriptCore, as the need is WebCore-specific.
Maciej Stachowiak
Comment 4
2008-10-23 02:43:16 PDT
Comment on
attachment 24593
[details]
A better fix r=me assuming it builds and passes tests
Alexey Proskuryakov
Comment 5
2008-10-23 03:16:29 PDT
Committed revision 37806.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug