WebCore/bindings/js/JSDOMWindowBase.h
@@ -22,6 +22,7 @@
 
 #include "PlatformString.h"
 #include "JSDOMBinding.h"
+#include "JSDOMGlobalObject.h"
 #include <kjs/protect.h>
 #include <wtf/HashMap.h>
 #include <wtf/OwnPtr.h>
@@ -44,12 +45,9 @@ namespace WebCore {
 
     class JSDOMWindowBasePrivate;
 
-    typedef HashMap<const JSC::ClassInfo*, RefPtr<JSC::StructureID> > JSDOMStructureMap;
-    typedef HashMap<const JSC::ClassInfo*, JSC::JSObject*> JSDOMConstructorMap;
-
     // This is the only WebCore JS binding which does not inherit from DOMObject
-    class JSDOMWindowBase : public JSC::JSGlobalObject {
-        typedef JSC::JSGlobalObject Base;
+    class JSDOMWindowBase : public JSDOMGlobalObject {
+        typedef JSDOMGlobalObject Base;
 
         friend class ScheduledAction;
     protected:
@@ -131,11 +129,8 @@ namespace WebCore {
 
         void clearAllTimeouts();
 
-        JSDOMStructureMap& structures() { return d()->structures; }
-        JSDOMConstructorMap& constructors() const { return d()->constructors; }
-
     private:
-        struct JSDOMWindowBaseData : public JSGlobalObjectData {
+        struct JSDOMWindowBaseData : public JSDOMGlobalObjectData {
             JSDOMWindowBaseData(PassRefPtr<DOMWindow>, JSDOMWindowShell*);
 
             RefPtr<DOMWindow> impl;
@@ -150,9 +145,6 @@ namespace WebCore {
 
             typedef HashMap<int, DOMWindowTimer*> TimeoutsMap;
             TimeoutsMap timeouts;
-
-            JSDOMStructureMap structures;
-            JSDOMConstructorMap constructors;
         };
 
         static JSC::JSValuePtr childFrameGetter(JSC::ExecState*, const JSC::Identifier&, const JSC::PropertySlot&);
