WebCore/bindings/js/JSDOMWindowCustom.cpp
@@ -76,16 +76,6 @@ void JSDOMWindow::mark()
 #if ENABLE(OFFLINE_WEB_APPLICATIONS)
     markDOMObjectWrapper(globalData, impl()->optionalApplicationCache());
 #endif
-
-    JSDOMStructureMap::iterator end = structures().end();
-    for (JSDOMStructureMap::iterator it = structures().begin(); it != end; ++it)
-        it->second->mark();
-
-    JSDOMConstructorMap::iterator end2 = constructors().end();
-    for (JSDOMConstructorMap::iterator it2 = constructors().begin(); it2 != end2; ++it2) {
-        if (!it2->second->marked())
-            it2->second->mark();
-    }
 }
 
 bool JSDOMWindow::deleteProperty(ExecState* exec, const Identifier& propertyName)
